Reverted to old fix using absolute positioning for the ornamental border. Unsure what issue causing the 1px gap is. Testing in separate instance. I'm tired. I'm moving on.

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ TrueType font faces with support for various weights and sizes */
 * {
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 :root {
@@ -110,20 +110,23 @@ button {
 The SVG ornamental divider is included in this section with absolute positioning  */
 
 header {
-  position: relative;
   background-color: var(--purple-900);
-  padding: 32px 20px;
 
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  /* margin-bottom: -104px; */
 }
 
 .nav-container {
   display: flex;
-  width: 100%; /* Necessary for space-between */
   flex-direction: row;
   justify-content: space-between;
+
+  width: 100%; /* Necessary for space-between */
+  padding: 20px;
 }
 
 .hero-body {
@@ -142,17 +145,24 @@ header {
   left: 50%;
 
   width: 100%;
-  max-width: 22rem;
+  max-width: 20rem;
+  max-height: 11.5rem;
 
   padding: 0 20px;
   z-index: 1;
   transform: translateX(-50%);
 }
 
-.ornamental-divider {
+.divider-container {
   position: absolute;
-  left: 0;
-  bottom: -1px; /* Strange rendering issue with SVG. Displays a gap otherwise. */
+  bottom: -1px;
+
+  width: 100%;
+  height: fit-content;
+}
+
+.ornamental-divider {
+  display: block;
   fill: white;
   width: 100%;
 }
